Updates to walking skeleton to include playtest review as homepage.

--- a/CharacterGenerationDND/Client/Pages/Index.razor
+++ b/CharacterGenerationDND/Client/Pages/Index.razor
@@ -2,8 +2,29 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<h1>One D&D Playtest 5 Review</h1>
+<h2>Sorcerer</h2>
+<p>
+	<div>Despite all the comments of the sorcerer being overpowered this version, I actually believe they are weaker in this version.</div>
+</p>
+<p>
+	<div>Biggest Problem: Twinned spell nerf: It may have been too powerful before, but this was too big of a change.</div>  
+	<div>Playtest Version (concise): Using twinned spell allows you to cast a 1st through fifth level spell slot and repeat the casting of the same spell next turn using sorcery points equal to spell level.</div>
+	<div>My suggestion: allow the caster to share concentration with the previous casting (if desired).</div>
+</p>
+<p>
+	<div>Sorcerous Burst Problem: too little damage for a damage only cantrip.</div>
+	<div>Playtest Version: Cantrip with attack roll using spell attack bonus that deals a d6 of damage if the result of the die is a 6 you get to deal an additional d6 (max times = spellcasting modifier)</div>
+	<div>My suggestion: allow additional d6 to be rolled when 1 or 6 is rolled.</div>
+</p>
+<p>
+	<div>Sorcerous Vitality Problem: Too little healing</div>
+	<div>Playtest Version: 4th level Spell:2d6 healing + spell casting modifier and end blinded,deafened or poisoned condition</div>
+	<div>My suggestion: Change to 3rd Level spell or add an additional d6</div>
+</p>
+<p>
+	<div>Sorcery Incarnate Problem: Concentration 5th Level spell</div>
+	<div>Playtest Version: 5th level spell that allows you to regain 1d4 sorcery points when cast. Gives advantage on spell attack rolls. It also allows you to combine two metamagics on one spell when cast while this active.</div>
+	<div>My suggestion: Remove concentration requirement and change to 4th level spell.  Alternatively, allow one additional spell cast to share its concentration. *This spell might be better if there are additional high level spells with attack rolls instead of saving throw added.*</div>
+</p>
